--- a/client/styles/sections/_recruitingPanel.scss
+++ b/client/styles/sections/_recruitingPanel.scss
@@ -36,7 +36,12 @@
 ul.pagination {
     margin: 0;
 }
-
+.adminRecruitP {
+  color: $gray;
+}
+.validation-errors {
+  color: $brand-danger;
+}
 .buff-available {
     color: #00be4d;
 }
